[metadata]
name = apt-install-docs
version = attr: apt_install_docs.__version__
author = Joel Ray Holveck
author_email = joelh@piquan.org
description = Install suggested docs for installed packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/piquan/apt-install-docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Unix
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.6
install_requires = python-apt>=0.7.8

[options.entry_points]
console_scripts =
    apt-install-docs = apt_install_docs:main
